--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <body>
     <section class="content">
         <div class="menu-content">
-            <header> <a href="#conv">logo</a></header>
+            <header> 
+                <a href="#conv">
+                    <img class = "logo-img" src="./img/LOGO.png" alt="logo imgs">
+                </a>
+            </header>
             <nav>
                 <ul>
                     <li><a href="#conv">conversor</li></a>
